--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@
 @import "../node_modules/@syncfusion/ej2-vue-inputs/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-vue-calendars/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-vue-dropdowns/styles/tailwind.css";
+@import '../node_modules/@syncfusion/ej2-splitbuttons/styles/tailwind.css';
 
 @tailwind base;
 
