--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@
 @import "../node_modules/@syncfusion/ej2-vue-calendars/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-vue-dropdowns/styles/tailwind.css";
 @import '../node_modules/@syncfusion/ej2-splitbuttons/styles/tailwind.css';
+@import "../node_modules/@syncfusion/ej2-icons/styles/tailwind.css";
 
 @tailwind base;
 
