--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,11 @@
-@import "../node_modules/@syncfusion/ej2-base/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-vue-buttons/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-vue-popups/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-vue-inputs/styles/material.css";
-@import "../node_modules/@syncfusion/ej2-vue-calendars/styles/material.css";
+@import "../node_modules/@syncfusion/ej2-base/styles/tailwind.css";
+@import "../node_modules/@syncfusion/ej2-vue-buttons/styles/tailwind.css";
+@import "../node_modules/@syncfusion/ej2-vue-popups/styles/tailwind.css";
+@import "../node_modules/@syncfusion/ej2-vue-inputs/styles/tailwind.css";
+@import "../node_modules/@syncfusion/ej2-vue-calendars/styles/tailwind.css";
+@import "../node_modules/@syncfusion/ej2-vue-dropdowns/styles/tailwind.css";
+@import '../node_modules/@syncfusion/ej2-splitbuttons/styles/tailwind.css';
+@import "../node_modules/@syncfusion/ej2-icons/styles/tailwind.css";
 
 @tailwind base;
 
@@ -45,51 +48,4 @@
     --background: #fff;
     --main: #0d0106;
     --header: #2d3748;
-}
-
-.loading_wrap {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background: #fff;
-    display: block;
-    position: absolute;
-}
-
-.loader_logo {
-    height: 80px;
-    width: 80px;
-    position: absolute;
-    left: calc(50% - 50px);
-    top: 38%;
-}
-
-.loader_logo img {
-    height: 100%;
-    width: 100%;
-}
-
-.loading {
-    border: 3px solid rgba(102, 51, 153, 0.45);
-    position: absolute;
-    left: calc(50% - 35px);
-    top: 50%;
-    width: 55px;
-    height: 55px;
-    border-radius: 50%;
-    border-top-color: #a855f7;
-    animation: loader 1s ease-in-out infinite;
-    -webkit-animation: loader 1s ease-in-out infinite;
-}
-
-@keyframes loader {
-    to {
-        -webkit-transform: rotate(360deg);
-    }
-}
-
-@-webkit-keyframes loader {
-    to {
-        -webkit-transform: rotate(360deg);
-    }
 }
